# LCPFCT

./: .gitignore  .mypy.ini  .travis.yml  CMakeLists.txt  README.md  README.rst  RunFast2d.f90  RunShock.f90  fast2d.f  fast2d.pyf  fort.11  gasdyn.f  lcpfct.f  meson.build  plot_fast2d.py  plotshock.py  requirements.txt  runfast2d.f  runfast2d.py  runshock.f  runshock.py  setup.cfg  setup.py  shock  shock.f  shock.pyf
.github/workflows/: ci.yml
examples/: runfast2d.f  runshock.f
lcpfct/: runfast2d.py  runshock.py
src/: RunFast2d.f90  RunShock.f90  convect.f  diaphragm.f  fast2d.f  gasdyn.f  lcpfct.f  shock.f
test/: test.py
tests/: test.py  test_mod.py
