[metadata]
name = lcpfct
version = 0.2.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Python wrapper for LCPFCT model
url = https://github.com/scivision/lcpfct
keywords =
  flux transport
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Operating System :: OS Independent
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.6
include_package_data = True
packages = find:
install_requires =
  xarray
  numpy


[options.extras_require]
tests =
  pytest
lint =
  flake8
  mypy
plots =
  matplotlib
